2001-11-15  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.in (QM_MAJOR_VER): New variable.
	(QM_MINOR_VER): Likewise.
	(QM_VERSION): Likewise.
	(QM_TAR_GZ): Likewise.
	(CVS_SERVER): Likewise.
	(CVS_REPOSITORY): Likewise.
	(CVS): Likewise.
	(RPM_ARCH): Likewise.
	(RPM_BASE): Likewise.
	(QM_RPM): Likewise.
	(QM_SRPM): Likewise.
	(dist): New target.
	(rpm): Likewise.
	(release): Likewise.
	* configure.in (QM_MAJOR_VER): Substitute it.
	(QM_MINOR_VER): Likewise.
	(QM_RELEASE_VER): Likewise.
	(QM_VERSION): Likewise.
	(DOCBOOK_DTD): Revisit logic.
	(AC_OUTPUT): Generate qm.spec.
	* configure: Regenerated.
	* qm.spec: Remove.
	* qm.spec.in: New file.

2001-11-15  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.in (check): New target.
	* doc/qm-html.dsl: Fix typo.
	* doc/manual/test-manual.xml: Update for simplifications below.
	* qm/test/base.py (get_class_arguments): New method.
	* qm/test/cmdline.py (Command.Execute): Fix thinko.
	* qm/test/context.py (Context.get): New method.
	(ContextWrapper.get): Likewise.
	* qm/test/database.py (ItemDescriptor.GetClassArguments): New
	method.
	(ItemDescriptor._MakeItem): Use it.
	* qm/test/resource.py (Resource.arguments): Update documentation.
	(Resource.__init__): Simplify.
	* qm/test/test.py (Test.arguments): Update documentation.
	(Test.__init__): Simplify.
	(Test.GetTargetGroup): Update.
	* qm/test/xmldb.py (Database.__GetArgumentsFromDomNode): Use
	get_class_arguments.
	* qm/test/classes/command.py: Update test classes.
	* qm/test/classes/file.py: Likewise.
	* qm/test/classes/python.py: Likewise.
	* qm/test/classes/temporary.py: Update resource classes.
	* qm/test/web/web.py (ShowItemPage.__init__): Update
	documentation.
	(QMTestServer.HandleSubmitItem): Use get_class_arguments.
	(QMTestServer.MakeNewTest): Use get_class_arguments.
	(QMTestServer.MakeNewResource): Use get_class_arguments.
	
2001-11-14  Alex Samuel  <samuel@codesourcery.com>

	* qm/track/memory_issue_store.py (IssueStore.__Write): Store